[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "packaging>20.9"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Aim to get all pyflakes logical errors ("F") passing
select = ["F"]
# For now, deselect rules that do not pass
ignore = [
  "F811", # Redefinition of unused variable
  "F821", # Undefined name
  "F841", # Local variables assigned but unused
]

[tool.ruff.per-file-ignores]
# Unused imports often intentional in top-level __init__.py 
"__init__.py" = ["F401"]
